# boostfastapi

./: mkdocs.yml  pyproject.toml
docs/: index.md
